# milky-blog-service

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  error_list.json  pyproject.toml  requirements.txt
docs/: auth.ini  openapi.json
migrations/: 20250620180415_init.down.sql  20250620180415_init.up.sql  20250625131233_change_rate.down.sql  20250625131233_change_rate.up.sql  20250628121948_fix_clean_unused_tags_trigger.down.sql  20250628121948_fix_clean_unused_tags_trigger.up.sql
migrations/versions/: 1eeabdc818dc_added_likes_and_views.py  711dee988077_atricle_poster_type_edit.py  93730406cdb4_files_added.py  f5a87704c048_initial.py
minio/init/: 01-create-bucket.sh  02-set-policy.sh  03-create-user.sh
minio/policy/: article-policy.json
proto/: ums.proto
src/: app.py  app_state.rs  config.py  config.rs  ioc.rs  lifespan.py  main.rs  openapi.rs  router.py  test.py
src/adapters/: jwt_id_provider.rs  mod.rs
src/adapters/database/: article_gateway.rs  aws_s3.rs  comment_gateway.rs  minio.rs  mod.rs  postgres.rs  tag_gateway.rs
src/adapters/database/aws_s3/: file_storage_gateway.rs
src/adapters/database/minio/: file_storage_gateway.rs
src/adapters/database/postgres/: article_gateway.rs  comment_gateway.rs  (+2 more)
src/application/: mod.rs
src/application/article/: create.rs  delete.rs  find.rs  get.rs  mod.rs  rate.rs  update.rs
src/application/comment/: create.rs  delete.rs  get.rs  get_tree.rs  mod.rs  rate.rs  update.rs
src/application/common/: article_gateway.rs  comment_gateway.rs  error.rs  file_map_gateway.rs  file_storage_gateway.rs  id_provider.rs  interactor.rs  mod.rs  presigned_url.rs  tag_gateway.rs
src/controllers/: __init__.py  access.py  admin.py  article.py  auth.py  blog.py  comments.py  email.py  files.py  notifications.py  notify.py  role.py  stats.py  user.py
src/controllers/admin/: __init__.py  moderator.py
src/controllers/blog/: __init__.py  article.py  comments.py
src/controllers/super/: __init__.py
src/dependencies/: __init__.py  auth_bearer.py  jwt_barrier.py  role_filter.py  services.py
src/domain/: error.rs  mod.rs
src/domain/models/: article.rs  article_state.rs  comment.rs  comment_state.rs  file.rs  mod.rs  permissions.rs  rate_state.rs  tag.rs  user_id.rs  user_state.py  user_state.rs
src/domain/services/: access.rs  article.py  mod.rs  validator.py  validator.rs
src/exceptions/: __init__.py  api.py  http.py
src/exceptions/models/: __init__.py  api_error.py
src/mbs/: app.py  config.py  ioc.py  lifespan.py  main.py  router.py
src/mbs/application/: initial.py
src/mbs/controllers/: stats.py
src/mbs/dependencies/: repos.py  services.py
src/mbs/domain/: exceptions.py
src/mbs/middleware/: jwt.py
src/mbs/models/: auth.py  permission.py  state.py
src/mbs/presentation/: interactor_factory.py
src/mbs/services/: __init__.py  article.py  blog_service_control.py  comment.py  notification.py  permission.py
src/mbs/utils/: s3.py
src/mbs/views/: article.py  base.py  comment.py  notification.py
src/middleware/: __init__.py  jwt.py
src/models/: __init__.py  access.py  auth.py  file_type.py  role.py  state.py
src/models/schemas/: __init__.py  article.py  comment.py  error.py  files.py  jwt.py  notifications.py  pagination.py  tag.py  user.py
src/models/tables/: __init__.py  article.py  comment.py  file.py  like.py  notification.py  tag.py  tags.py  user.py
src/presentation/: interactor_factory.rs  mod.rs
src/presentation/rest/: article.rs  comment.rs  error.rs  id_provider.rs  mod.rs
src/services/: __init__.py  access.py  article.py  blog.py  comment.py  email.py  filestorage.py  notification.py  role.py  stats.py  user.py
src/services/auth/: __init__.py  auth.py  filters.py  jwt.py  password.py  scheduler.py  session.py  utils.py
src/services/repository/: __init__.py  article.py  base.py  comment.py  file.py  like.py  notification.py  user.py
src/services/storage/: base.py  s3.py
src/utils/: __init__.py  aiohttp_client.py  fakeredis.py  formators.py  openapi.py  other.py  password.py  rabbitmq.py  redis.py
src/views/: __init__.py  api_error.py  article.py  auth.py  base.py  comment.py  error.py  file.py  notification.py  user.py
(+83 files in other folders)
