[package]
name = "milky-blog-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# IO
actix-web = "4.11"
tokio = { version = "1.45", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio"] }

# Data
uuid = { version = "1.17", features = ["v4", "fast-rng", "serde"] }
once_cell = "1.21"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
jsonwebtoken = "9.3"
serde_json = "1.0.140"
