[package]
name = "milky-blog-service"
version = "0.1.0"
edition = "2024"


[dependencies]
# IO
actix-web = "4.11"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio"] }
aws-sdk-s3 = { version = "1.94", features = ["rt-tokio", "behavior-version-latest"] }
aws-sigv4 = { version = "1.3", features = ["sigv4a"] }
aws-smithy-runtime-api = "1.8"
consulrs = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Data
uuid = { version = "1.17", features = ["v4", "fast-rng", "serde"] }
once_cell = "1.21"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
jsonwebtoken = "9.3"
serde_json = "1.0"
serde_yaml = "0.9.34-deprecated"
base64 = "0.22.1"

# Doc
utoipa = { version = "5.4", features = ["actix_extras", "uuid", "chrono"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "6.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
url = "2.5.4"

[build-dependencies]
tonic-build = "0.13"