[tool.poetry]
name = "milky-blog-service"
version = "0.1.0"
description = ""
authors = ["JKearnsl <boyarshinovn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = "^0.29"
python-multipart = "^0.0.9"

# Database
SQLAlchemy = "^2.0"
asyncpg = "^0.29"
psycopg2-binary = "^2.9"

# Misc
python-consul = "^1.1"
grpcio = "^1.59"
APScheduler = "^3.10"
aiobotocore = "^2.7"


[tool.poetry.group.dev.dependencies]
alembic = "^1.12"
grpcio-tools = "^1.57"
types-aiobotocore = "^2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
